src/test/ui/issues/issue-34028.rs
// compile-pass
// skip-codegen

macro_rules! m {
    () => { #[cfg(any())] fn f() {} }
}

trait T {}
impl T for () { m!(); }


fn main() {}
